--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-plotly
-Pillow
-scipy
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-requests
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.0.0
+Pillow>=9.0.0
+scipy>=1.10.0
+google-api-python-client>=2.0.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
+requests>=2.28.0
